# project-aegis

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aegis-fuzzer/: README.md  __init__.py  cli.py
aegis-fuzzer/app/: __init__.py  main.py  models.py  storage.py
aegis-fuzzer/engine/: coverage.py  detectors.py  harness.py  mutators.py  report.py  runner.py
aegis-fuzzer/tests/: test_mutators.py  test_runner.py
aegis-guard/: README.md  __init__.py  agent.py  audit.py  memory.py  redaction.py
aegis-guard/app/: __init__.py  main.py
aegis-guard/policy/: __init__.py  engine.py
aegis-guard/tests/: test_injection_block.py  test_policy_allow_deny.py  test_redaction.py
aegis-guard/tools/: __init__.py  db_query.py  email_draft.py  http_fetch.py  payment_stub.py  web_search.py
aegis_fuzzer/: __init__.py  cli.py
aegis_fuzzer/app/: __init__.py  main.py  models.py  storage.py
aegis_fuzzer/engine/: __init__.py  coverage.py  detectors.py  harness.py  mutators.py  report.py  runner.py
aegis_fuzzer/reports/: aegis-fuzzer-20251112-163857.html  aegis-fuzzer-20251112-163857.sarif
aegis_fuzzer/tests/: test_mutators.py  test_runner.py
aegis_guard/: __init__.py  agent.py  audit.py  memory.py  redaction.py
aegis_guard/app/: main.py
aegis_guard/policy/: __init__.py  engine.py
aegis_guard/tests/: test_injection_block.py  test_policy_allow_deny.py  test_redaction.py
aegis_guard/tools/: __init__.py  db_query.py  email_draft.py  http_fetch.py  payment_stub.py  web_search.py
common/: __init__.py
common/llm/: base.py  offline.py
common/utils/: hashing.py  logging.py  pii.py  sarif.py
project_aegis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+5 files in other folders)
